fixed 02727: removed the "text-align: center;" from .questionhelp
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@6452 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/templates/default/template.css
+++ b/templates/default/template.css
@@ -14,7 +14,6 @@ color:#1d2d45;
 .questionhelp {
 font-size:10px;
 background-color:#eef6ff;
-text-align: center;
 }
 
 .success {
